name:                pcf-font-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/michael-swan/pcf-font-example#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Swan
maintainer:          mswan@fastmail.com
copyright:           (c) 2017 Michael Swan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable render-png
  hs-source-dirs:      src
  main-is:             RenderPNG.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pcf-font
                     , JuicyPixels
                     , bytestring
  default-language:    Haskell2010

executable render-text
  hs-source-dirs:      src
  main-is:             RenderText.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pcf-font
                     , bytestring
  default-language:    Haskell2010

executable render-text-static
  hs-source-dirs:      src
  main-is:             RenderTextStatic.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pcf-font
                     , pcf-font-embed
                     , bytestring
  default-language:    Haskell2010
